[gd_scene load_steps=4 format=3 uid="uid://b2brwh630rgwx"]

[ext_resource type="Texture2D" uid="uid://duyoxq5wgrfxa" path="res://assets/sprites/dust_bullet.png" id="1_btgvb"]
[ext_resource type="Script" path="res://scenes/game_scene/dust/dust_bullet.gd" id="1_n7qa3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ttwat"]
size = Vector2(8, 6)

[node name="DustBullet" type="Area2D"]
z_index = 1
collision_layer = 2
collision_mask = 13
script = ExtResource("1_n7qa3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_btgvb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ttwat")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
